--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,3 +14,6 @@
 @import 'blocks/header';
 @import 'blocks/slide';
 @import 'blocks/about';
+@import 'blocks/we';
+@import 'blocks/work';
+@import 'blocks/team';
