--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,3 +17,6 @@
 @import 'blocks/we';
 @import 'blocks/work';
 @import 'blocks/team';
+@import 'blocks/reviews';
+@import 'blocks/article';
+@import 'blocks/footer';
