--- a/scss/blocks/_team.scss
+++ b/scss/blocks/_team.scss
@@ -1,5 +1,6 @@
 .team {
     background: url(../../img/team.jpg) no-repeat;
+    background-size: 100% 100%;
     padding-top: 112px;
     padding-bottom: 108px;
 }
