--- a/scss/blocks/_about.scss
+++ b/scss/blocks/_about.scss
@@ -47,9 +47,9 @@
     display: flex;
     align-items:center;
     margin-top: 21px;
-    img {
-        padding-right: 15px;
-    }
+}
+.arrow_all {
+    padding-right: 15px;
 }
 
 .we-about {
@@ -128,4 +128,33 @@
     text-align: center;
     max-width: 138px;
     padding-top: 180px;
+}
+
+.about-video_port_item:after {
+    border-right: 2px solid currentcolor;
+    border-bottom: 2px solid currentcolor;
+    content: '';
+    position: absolute;
+    width: 8px;
+    height: 8px;
+    color: #E5E5E5;
+    right: 231px;
+    margin-top: 35px;
+}
+
+.about-video_port_item:after {
+    transform: rotate(88deg)
+}
+
+.about-video_port_item:before {
+    color: #E5E5E5;
+    border-bottom: 2px solid ;
+    content: '';
+    position: absolute;
+    width: 56px;
+    height: 16px;
+    right: 195px;
+    transform: rotate(-45deg);
+    margin-top: 35px;
+    
 }
