--- a/scss/blocks/_work.scss
+++ b/scss/blocks/_work.scss
@@ -3,3 +3,87 @@
     padding-top: 77px;
     padding-bottom: 191px;
 }
+
+.slider_work_title {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 130%;
+    color: #E5E5E5;
+    padding-bottom: 40px;
+    padding-left: 20px;
+    max-width: 400px;
+}
+
+.slide_work_descr {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 130%;
+    color: #E5E5E5;
+    display: contents;
+}
+
+.slider_work_text {
+    background: #15385F;
+    padding-top: 45px;
+    padding-bottom: 50px;
+    padding-left: 27px;
+    padding-right: 27px;
+}
+
+.slide_work_li::marker {
+    color: #E5E5E5;
+}
+
+.slider_work_item {
+    max-width: 560px;
+}
+
+
+.slider_work_img {
+    max-height: 420px;
+    img {
+        width: 100%;
+        height: 420px;
+    }
+}
+
+.work_opacity {
+    opacity: 0.3;
+}
+
+.slider_work_items {
+    .swiper-slide-active {
+        opacity: 1;
+        margin-top: -70px;
+        .work_next {
+            display: block;
+        }
+    }
+}
+
+
+
+.work_next_a {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 130%;
+    color: #15385F;
+    text-decoration: none;
+    display: flex;
+    align-items: flex-end;
+}
+.work_arrow {
+    color: #15385F;
+}
+
+.work_next {
+    padding-top: 55px;
+    display: none;
+}
+
+.slider_work {
+    padding-top: 177px;
+}
