--- a/scss/blocks/_reviews.scss
+++ b/scss/blocks/_reviews.scss
@@ -16,6 +16,10 @@
     width: 360px;
     height: 270px;
     background: #15385F;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
 }
 
 .reviews_video {
