--- a/scss/blocks/_about.scss
+++ b/scss/blocks/_about.scss
@@ -1,6 +1,6 @@
 .about {
-
     background: url(../../img/we.jpg) no-repeat;
+    background-size: 100% 100%;
     padding-top: 46px;
     padding-bottom: 11px;
 }
@@ -91,11 +91,23 @@
     border: 1px solid rgba(231, 32, 32, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     border-radius: 100%;
-    padding-top: 14.62px;
-    padding-left: 12.42px;
-    padding-bottom: 11.29px;
-    padding-right: 13.55px;
+    padding-top: 12px;
+    padding-left: 12px;
+    padding-bottom: 13px;
+    padding-right: 13px;
+}
 
+.play_video_two {
+    border: 1px solid rgba(231, 32, 32, 0.6);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    border-radius: 100%;
+    padding: 11px 11px 12px 12px;
+}
+
+.play-video_about:before {
+    content: '';
+    border: 1px solid rgba(231, 32, 32, 0.3);
+    border-radius: 50%;
 }
 
 .play {
@@ -128,6 +140,7 @@
     text-align: center;
     max-width: 138px;
     padding-top: 180px;
+    position: relative;
 }
 
 .about-video_port_item:after {
@@ -138,7 +151,7 @@
     width: 8px;
     height: 8px;
     color: #E5E5E5;
-    right: 231px;
+    right: 117%;
     margin-top: 35px;
 }
 
@@ -153,7 +166,7 @@
     position: absolute;
     width: 56px;
     height: 16px;
-    right: 195px;
+    right: 91%;
     transform: rotate(-45deg);
     margin-top: 35px;
     
