--- a/scss/blocks/_article.scss
+++ b/scss/blocks/_article.scss
@@ -69,3 +69,76 @@
         margin-right: 15px;
     }
 }
+
+.__title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.__title .__item p{
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 130%;
+    text-align: right;
+    color: #E72020;
+    max-width: 451px;
+    padding-right: 40px;
+    border-right: 2px solid #15385F;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+.__title .__item h2{
+    font-style: normal;
+    font-weight: 600;
+    font-size: 80px;
+    line-height: 130%;
+    color: #15385F;
+    padding-left: 60px;
+}
+
+.wrapper {
+    display: flex;
+    padding-top: 90px;
+}
+
+.wrapper .__items {
+    display: block;
+    padding-left: 100px;
+}
+
+.wrapper .__items h3{
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 130%;
+    color: #E72020;
+    max-width: 440px;
+    padding-bottom: 35px;
+}
+
+.wrapper .__items p{
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 130%;
+    color: #15385F;
+    max-width: 400px;
+    padding-bottom: 62px;
+}
+
+.wrapper .__items a{
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 130%;
+    color: #15385F;
+    text-decoration: none;
+    display: flex;
+    align-items:flex-end;
+    img {
+        margin-right: 15px;
+    }
+}
