--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,3 +26,6 @@
 @import 'blocks/article';
 @import 'blocks/footer';
 @import 'blocks/product';
+@import 'blocks/gallery';
+@import 'blocks/404';
+@import 'blocks/contackt';
