--- a/scss/blocks/_gallery.scss
+++ b/scss/blocks/_gallery.scss
@@ -83,48 +83,58 @@
     margin: 70px auto;
 }
 
-// .swiper-container{
-//     .swiper-wrapper{
-// -webkit-box-align: center;
-//     -webkit-align-items: center;
-//     -moz-box-align: center;
-//     -ms-flex-align: center;
-//     align-items: center;
-//     }
-// 		.swiper-slide{
-//             img {
-//                 width: 300px;
-//                 background: #EDEDED;
-//                 width: 300px;
-//                 height: 205px;
-//             }
-// 			@media screen and (min-width: 768px){
-//                 .swiper-slide{
-//                     img {
-//                         width: 370px;
-//                         background: #EDEDED;
-//                         width: 300px;
-//                         height: 205px;
-//                     }
-				
-// 			}
-// 			&-active{
-//                 background: #EDEDED;
-//                 width: 440px;
-//                 img {
-//                     width: 440px;
-//                     margin-right: 50px;
-//                 }
-// 				@media screen and (min-width: 768px){
-//                     img {
-//                         width: 440px;
-//                         height: 300px;
-//                     }
-					
-// 				}
-// 			}
-// 		}
-// 	}
+.swiper_gallery .swiper-container {
+    .swiper-wrapper {
+-webkit-box-align: center;
+    -webkit-align-items: center;
+    -moz-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    }
+}
+
+
+
+.swiper_gallery .swiper-slide {
+    background: #EDEDED;
+    width: 440px;
+    img {
+        width: 440px;
+    }
+}
+
+.swiper_gallery .swiper-slide-prev {
+    width: 350px;
+    height: 205px;
+    background: #EDEDED;
+    margin-right: 10px;
+    img {
+        width: 350px;
+        height: 205px;
+    }
+}
+
+.swiper_gallery .swiper-slide-next {
+    width: 350px;
+    height: 205px;
+    background: #EDEDED;
+    margin-right: 10px;
+    img {
+        width: 350px;
+        height: 205px;
+    }
+
+}
+
+.swiper_gallery .swiper-slide-active {
+    background: #EDEDED;
+    width: 440px;
+    img {
+        width: 440px;
+    }
+}
+
+
 
     .swiper-prev {
         transform: rotate(180deg);
@@ -137,4 +147,4 @@
     justify-content: space-between;
     margin-left: 360px;
     margin-top: 20px;
-}
+ }
