--- a/scss/blocks/_about.scss
+++ b/scss/blocks/_about.scss
@@ -116,6 +116,8 @@
 }
 
 .play-video_about {
+    border:none;
+    cursor: pointer;
     background: #E72020;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     padding: 27px 25px;
